subida de presupuesto

--- a/scss/stylo.css
+++ b/scss/stylo.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap");
 * {
   padding: 0;
   margin: 0;
@@ -5,6 +6,7 @@
 
 body {
   background-color: #E9D431;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 header {
@@ -15,6 +17,10 @@ header {
 
 header .container-fluid {
   font-size: 24px;
+}
+
+header .container-fluid img {
+  width: 150px;
 }
 
 header .container-fluid .navbar-toggler-icon {
@@ -32,21 +38,24 @@ header .container-fluid .collapse .navbar-nav {
 }
 
 header .container-fluid .collapse .navbar-nav a {
-  color: white;
-  font-size: 24px;
+  color: whitesmoke !important;
 }
 
 main {
   background-color: #E9D431;
 }
 
-.main-index {
+.main, .main-index, .main-bebidas, main, .main-contacto {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  background-color: #E9D431;
   margin-top: 3rem;
   margin-bottom: 3rem;
-  background-color: #E9D431;
+  font-size: 20px;
+}
+
+.main-index {
   -ms-flex-pack: distribute;
       justify-content: space-around;
   -webkit-box-align: center;
@@ -62,6 +71,152 @@ main {
   width: 450px;
   height: 250px;
   border: 6px solid black;
+}
+
+.main-bebidas {
+  display: block;
+}
+
+.main-bebidas #contenedor {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: auto auto auto;
+      grid-template-columns: auto auto auto;
+  -ms-grid-rows: auto auto;
+      grid-template-rows: auto auto;
+  text-align: center;
+  /*background-image: url("fondos gaseosas/fondo1.jpg");
+    background-size: cover;*/
+  background-color: #e9d431;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+}
+
+.main-bebidas #contenedor h3 {
+  margin-top: 1rem;
+}
+
+.main-bebidas #contenedor div {
+  -webkit-transition: 1s;
+  transition: 1s;
+  margin-bottom: 1rem;
+  width: 250px;
+  background-color: #e9d431;
+}
+
+.main-bebidas #contenedor div:hover {
+  -webkit-transform: scale(0.9, 0.9);
+          transform: scale(0.9, 0.9);
+  background-color: #7e710e;
+}
+
+.main-bebidas #contenedor div img {
+  width: 150px;
+  margin-top: 5px;
+}
+
+.main-bebidas #contenedor div button {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  background-color: #e9d431 !important;
+  border: 3px solid #000 !important;
+  color: #000 !important;
+}
+
+.card {
+  width: 300px !important;
+  background-color: #e9d431;
+  border: 0;
+  text-align: center;
+  margin-left: 1.5rem;
+  font-size: 16px;
+}
+
+.card:hover {
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
+  -webkit-transition: 400ms;
+  transition: 400ms;
+  background-color: #7e710e;
+}
+
+.card img {
+  margin-left: 15%;
+  width: 200px !important;
+  padding: 1rem;
+}
+
+.card button {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  background-color: #e9d431 !important;
+  border: 3px solid #000 !important;
+  color: #000 !important;
+}
+
+main {
+  display: block;
+}
+
+main #ubicacionFlex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+main #ubicacionFlex h2 {
+  margin-top: 2rem;
+  color: #000;
+  border: 2px solid;
+  border-radius: 15px;
+}
+
+.main-contacto {
+  display: block;
+}
+
+.main-contacto #centrarFormulario {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.main-contacto #centrarFormulario .contacto {
+  border: 3px solid black;
+  width: 500px;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+  background-color: gainsboro;
+  text-align: center;
+}
+
+.main-contacto #centrarFormulario .contacto button {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  background-color: #e9d431 !important;
+  border: 3px solid #000 !important;
+  color: #000 !important;
 }
 
 footer {
@@ -103,7 +258,6 @@ footer .flex-1 .sucursal ul li {
 }
 
 footer .flex-1 .imagen-footer {
-  width: 100px;
   margin-left: 0;
   -webkit-animation-name: girar;
           animation-name: girar;
@@ -111,6 +265,10 @@ footer .flex-1 .imagen-footer {
           animation-duration: 3s;
   -webkit-animation-iteration-count: infinite;
           animation-iteration-count: infinite;
+}
+
+footer .flex-1 .imagen-footer img {
+  width: 120px;
 }
 
 @-webkit-keyframes girar {
@@ -170,20 +328,93 @@ footer .flex-1 .iconos img:hover {
 }
 
 @media (max-width: 420px) {
+  .flex-1 {
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    font-size: 12px;
+  }
+  .flex-1 .imagen-footer {
+    display: none;
+  }
+  .flex-1 .iconos {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
   .main-index {
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     margin-right: 150px;
   }
   .main-index .banner img {
     width: 250px;
     margin-bottom: 35px;
   }
-  .main-index iframe {
+  .main-index .video {
     width: 225px;
     height: 125px;
   }
+  .main-bebidas {
+    display: block;
+  }
+  .main-bebidas #contenedor {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .main-bebidas #contenedor div {
+    margin-bottom: 1rem;
+    width: 200px;
+  }
+  .main-bebidas #contenedor div img {
+    width: 100px;
+    margin-top: 5px;
+  }
+  .main-bebidas #contenedor div button {
+    margin-top: 12px;
+  }
+  .card {
+    text-align: center;
+    background-color: #e9d431;
+    color: black;
+  }
+  .card img {
+    margin-left: 16.5%;
+  }
+  #centrarFormulario {
+    padding: 1rem;
+  }
   .mapa {
-    width: 100%;
-    height: 230px;
+    width: 350px;
+    height: 200px;
   }
 }
 /*# sourceMappingURL=stylo.css.map */
